@@ -40,6 +40,7 @@
 #include <limits.h>
 #include <signal.h>
 #include <stdarg.h>
+#include <stdbool.h>
 #include <stddef.h>
 #include <stdio.h>
 #include <stdlib.h>
@@ -70,22 +71,6 @@ extern char **environ;
 #if !HAVE_ASPRINTF
   int rpl_asprintf(char **, const char *, ...);
   #define asprintf rpl_asprintf
-#endif
-
-#ifdef HAVE_STDBOOL_H
-#  include <stdbool.h>
-#else
-#  ifndef HAVE__BOOL
-#    ifdef __cplusplus
-typedef bool _Bool;
-#    else
-#      define _Bool signed char
-#    endif
-#  endif
-#  define bool _Bool
-#  define false 0
-#  define true 1
-#  define __bool_true_false_are_defined 1
 #endif
 
 #endif /* CCACHE_SYSTEM_H */
